made changes to specs for invalid option

--- a/reports/all-tests.html
+++ b/reports/all-tests.html
@@ -24,7 +24,7 @@
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareTwoEqualBooksUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareTwoEqualBooksUsingHashcode">shouldCompareTwoEqualBooksUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
@@ -42,7 +42,7 @@
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareABookToItselfUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareABookToItselfUsingHashcode">shouldCompareABookToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.130</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.144</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.000</td>
@@ -51,19 +51,19 @@
 <td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulReturn"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulReturn">shouldDisplaySuccessMessageForSuccessfulReturn</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.006</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.007</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt">shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt">shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndAddTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndAddTheBook">shouldAcceptValidBookNameFromUserAndAddTheBook</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndAddTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndAddTheBook">shouldAcceptValidBookNameFromUserAndAddTheBook</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyReturned"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyReturned">shouldReturnTrueIfSuccessfullyReturned</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyReturned"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyReturned">shouldReturnTrueIfSuccessfullyReturned</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToReturn"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToReturn">shouldReturnFalseIfFailedToReturn</a></td><td>Success</td><td></td><td>0.000</td>
@@ -72,13 +72,16 @@
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldAgainDisplayReturnedBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldAgainDisplayReturnedBooks">shouldAgainDisplayReturnedBooks</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldAgainDisplayReturnedBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldAgainDisplayReturnedBooks">shouldAgainDisplayReturnedBooks</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyIssued"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyIssued">shouldReturnTrueIfSuccessfullyIssued</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyIssued"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyIssued">shouldReturnTrueIfSuccessfullyIssued</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToIssue"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToIssue">shouldReturnFalseIfFailedToIssue</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToIssue"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToIssue">shouldReturnFalseIfFailedToIssue</a></td><td>Success</td><td></td><td>0.001</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnFalseForInvalidNumericOption"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnFalseForInvalidNumericOption">shouldReturnFalseForInvalidNumericOption</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption1"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption1">shouldReturnMenuOptionChosenforOption1</a></td><td>Success</td><td></td><td>0.002</td>
@@ -93,25 +96,25 @@
 <td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption4"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption4">shouldReturnMenuOptionChosenforOption4</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessageForInvalidNumericOption"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessageForInvalidNumericOption">shouldReturnInvalidOptionMessageForInvalidNumericOption</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessageForInvalidNumericOption"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessageForInvalidNumericOption">shouldReturnInvalidOptionMessageForInvalidNumericOption</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessage"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessage">shouldReturnInvalidOptionMessage</a></td><td>Success</td><td></td><td>0.002</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessage"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessage">shouldReturnInvalidOptionMessage</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.002</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldExitIfOptionTwoIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldExitIfOptionTwoIsChosen">shouldExitIfOptionTwoIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCheckoutBookIfOptionThreeIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldCheckoutBookIfOptionThreeIsChosen">shouldCheckoutBookIfOptionThreeIsChosen</a></td><td>Success</td><td></td><td>0.007</td>
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCheckoutBookIfOptionThreeIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldCheckoutBookIfOptionThreeIsChosen">shouldCheckoutBookIfOptionThreeIsChosen</a></td><td>Success</td><td></td><td>0.006</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/6_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/6_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.000</td>
