added new class movie that displays information about movie

--- a/reports/allclasses-frame.html
+++ b/reports/allclasses-frame.html
@@ -23,10 +23,13 @@
 <td nowrap><a target="classFrame" href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/6_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td>
+</tr>
+<tr>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/7_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
