--- a/reports/com/tw/biblioteca/package-frame.html
+++ b/reports/com/tw/biblioteca/package-frame.html
@@ -32,10 +32,13 @@
 <td nowrap><a href="4_MenuTest.html" target="classFrame">MenuTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="5_TaskDispatcherTest.html" target="classFrame">TaskDispatcherTest</a></td>
+<td nowrap><a href="5_MovieTest.html" target="classFrame">MovieTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="6_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
+<td nowrap><a href="6_TaskDispatcherTest.html" target="classFrame">TaskDispatcherTest</a></td>
+</tr>
+<tr>
+<td nowrap><a href="7_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
