--- a/reports/frame-sourcefiles-com.tw.biblioteca.html
+++ b/reports/frame-sourcefiles-com.tw.biblioteca.html
@@ -30,6 +30,9 @@ com.tw.biblioteca
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Menu.html">Menu</a> <i>(100%)</i></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Movie.html">Movie</a> <i>(100%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.TaskDispatcher.html">TaskDispatcher</a> <i>(100%)</i></td>
 </tr>
 <tr>
