--- a/reports/all-tests.html
+++ b/reports/all-tests.html
@@ -18,37 +18,37 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.235</td>
+<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.233</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulBeEqualToAnotherSameBook"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulBeEqualToAnotherSameBook">shoulBeEqualToAnotherSameBook</a></td><td>Success</td><td></td><td>0.000</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareTwoEqualBooksUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareTwoEqualBooksUsingHashcode">shouldCompareTwoEqualBooksUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToNull"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulNotBeEqualToNull">shoulNotBeEqualToNull</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToAnotherBook"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulNotBeEqualToAnotherBook">shoulNotBeEqualToAnotherBook</a></td><td>Success</td><td></td><td>0.001</td>
-</tr>
-<tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareABookToItselfUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareABookToItselfUsingHashcode">shouldCompareABookToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.134</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.137</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulReturn"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulReturn">shouldDisplaySuccessMessageForSuccessfulReturn</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulReturn"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulReturn">shouldDisplaySuccessMessageForSuccessfulReturn</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.006</td>
@@ -60,7 +60,7 @@
 <td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndAddTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndAddTheBook">shouldAcceptValidBookNameFromUserAndAddTheBook</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfMovies"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldDisplayListOfMovies">shouldDisplayListOfMovies</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfMovies"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldDisplayListOfMovies">shouldDisplayListOfMovies</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.000</td>
@@ -69,7 +69,7 @@
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyReturned"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyReturned">shouldReturnTrueIfSuccessfullyReturned</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToReturn"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToReturn">shouldReturnFalseIfFailedToReturn</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToReturn"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToReturn">shouldReturnFalseIfFailedToReturn</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.000</td>
@@ -81,16 +81,28 @@
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyIssued"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyIssued">shouldReturnTrueIfSuccessfullyIssued</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToIssue"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToIssue">shouldReturnFalseIfFailedToIssue</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToIssue"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToIssue">shouldReturnFalseIfFailedToIssue</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosen"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosen">shouldReturnMenuOptionChosen</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosen"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosen">shouldReturnMenuOptionChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shouldDisplayInformationAboutMovie"></a><a href="com/tw/biblioteca/5_MovieTest.html#shouldDisplayInformationAboutMovie">shouldDisplayInformationAboutMovie</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/5_MovieTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/5_MovieTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shoulBeUnequalToAnotherMovieWithDifferentName"></a><a href="com/tw/biblioteca/5_MovieTest.html#shoulBeUnequalToAnotherMovieWithDifferentName">shoulBeUnequalToAnotherMovieWithDifferentName</a></td><td>Success</td><td></td><td>0.001</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shoulBeEqualToAnotherSameMovie"></a><a href="com/tw/biblioteca/5_MovieTest.html#shoulBeEqualToAnotherSameMovie">shoulBeEqualToAnotherSameMovie</a></td><td>Success</td><td></td><td>0.000</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shouldDisplayInformationAboutMovie"></a><a href="com/tw/biblioteca/5_MovieTest.html#shouldDisplayInformationAboutMovie">shouldDisplayInformationAboutMovie</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldExitIfOptionTwoIsChosen"></a><a href="com/tw/biblioteca/6_TaskDispatcherTest.html#shouldExitIfOptionTwoIsChosen">shouldExitIfOptionTwoIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
@@ -102,7 +114,7 @@
 <td><a href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/6_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/6_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/6_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayInvalidMessageWhenInvalidOptionIsChosen"></a><a href="com/tw/biblioteca/6_TaskDispatcherTest.html#shouldDisplayInvalidMessageWhenInvalidOptionIsChosen">shouldDisplayInvalidMessageWhenInvalidOptionIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
@@ -111,7 +123,7 @@
 <td><a href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCallPrintMoviesIfOptionFiveIsChosen"></a><a href="com/tw/biblioteca/6_TaskDispatcherTest.html#shouldCallPrintMoviesIfOptionFiveIsChosen">shouldCallPrintMoviesIfOptionFiveIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/7_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/7_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/7_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/7_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 </table>
 </body>
