--- a/reports/all-tests.html
+++ b/reports/all-tests.html
@@ -18,40 +18,40 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.236</td>
+<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.226</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulBeEqualToAnotherSameBook"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulBeEqualToAnotherSameBook">shoulBeEqualToAnotherSameBook</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareTwoEqualBooksUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareTwoEqualBooksUsingHashcode">shouldCompareTwoEqualBooksUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToNull"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulNotBeEqualToNull">shoulNotBeEqualToNull</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareABookToItselfUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareABookToItselfUsingHashcode">shouldCompareABookToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareABookToItselfUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareABookToItselfUsingHashcode">shouldCompareABookToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.143</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.141</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulReturn"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulReturn">shouldDisplaySuccessMessageForSuccessfulReturn</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.006</td>
+<td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.007</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt"></a><a href="com/tw/biblioteca/2_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt">shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt</a></td><td>Success</td><td></td><td>0.000</td>
@@ -66,13 +66,19 @@
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyReturned"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyReturned">shouldReturnTrueIfSuccessfullyReturned</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyReturned"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyReturned">shouldReturnTrueIfSuccessfullyReturned</a></td><td>Success</td><td></td><td>0.000</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyCheckoutMovie"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyCheckoutMovie">shouldReturnTrueIfSuccessfullyCheckoutMovie</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToReturn"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToReturn">shouldReturnFalseIfFailedToReturn</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutMovies"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutMovies">shouldNotDisplayCheckedOutMovies</a></td><td>Success</td><td></td><td>0.001</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToCheckoutMovie"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToCheckoutMovie">shouldReturnFalseIfFailedToCheckoutMovie</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.000</td>
@@ -99,7 +105,7 @@
 <td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/5_MovieTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shoulBeUnequalToAnotherMovieWithDifferentName"></a><a href="com/tw/biblioteca/5_MovieTest.html#shoulBeUnequalToAnotherMovieWithDifferentName">shoulBeUnequalToAnotherMovieWithDifferentName</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shoulBeUnequalToAnotherMovieWithDifferentName"></a><a href="com/tw/biblioteca/5_MovieTest.html#shoulBeUnequalToAnotherMovieWithDifferentName">shoulBeUnequalToAnotherMovieWithDifferentName</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td><td><a name="shoulBeEqualToAnotherSameMovie"></a><a href="com/tw/biblioteca/5_MovieTest.html#shoulBeEqualToAnotherSameMovie">shoulBeEqualToAnotherSameMovie</a></td><td>Success</td><td></td><td>0.000</td>
