created class LoginInterface with spec to read library number from user

--- a/reports/allclasses-frame.html
+++ b/reports/allclasses-frame.html
@@ -20,16 +20,19 @@
 <td nowrap><a target="classFrame" href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/4_LoginInterfaceTest.html">LoginInterfaceTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/5_MovieTest.html">MovieTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/5_MenuTest.html">MenuTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/6_TaskDispatcherTest.html">TaskDispatcherTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/6_MovieTest.html">MovieTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/7_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/7_TaskDispatcherTest.html">TaskDispatcherTest</a></td>
+</tr>
+<tr>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/8_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
