--- a/reports/com/tw/biblioteca/package-frame.html
+++ b/reports/com/tw/biblioteca/package-frame.html
@@ -29,16 +29,19 @@
 <td nowrap><a href="3_LibraryTest.html" target="classFrame">LibraryTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="4_MenuTest.html" target="classFrame">MenuTest</a></td>
+<td nowrap><a href="4_LoginInterfaceTest.html" target="classFrame">LoginInterfaceTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="5_MovieTest.html" target="classFrame">MovieTest</a></td>
+<td nowrap><a href="5_MenuTest.html" target="classFrame">MenuTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="6_TaskDispatcherTest.html" target="classFrame">TaskDispatcherTest</a></td>
+<td nowrap><a href="6_MovieTest.html" target="classFrame">MovieTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="7_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
+<td nowrap><a href="7_TaskDispatcherTest.html" target="classFrame">TaskDispatcherTest</a></td>
+</tr>
+<tr>
+<td nowrap><a href="8_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
