--- a/reports/frame-sourcefiles-com.tw.biblioteca.html
+++ b/reports/frame-sourcefiles-com.tw.biblioteca.html
@@ -27,6 +27,9 @@ com.tw.biblioteca
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.LibraryController.html">LibraryController</a> <i>(100%)</i></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.LoginInterface.html">LoginInterface</a> <i>(100%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Menu.html">Menu</a> <i>(100%)</i></td>
 </tr>
 <tr>
