created class user

--- a/reports/allclasses-frame.html
+++ b/reports/allclasses-frame.html
@@ -32,7 +32,10 @@
 <td nowrap><a target="classFrame" href="com/tw/biblioteca/7_TaskDispatcherTest.html">TaskDispatcherTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/8_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/8_UserTest.html">UserTest</a></td>
+</tr>
+<tr>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/9_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
