--- a/reports/com/tw/biblioteca/package-frame.html
+++ b/reports/com/tw/biblioteca/package-frame.html
@@ -41,7 +41,10 @@
 <td nowrap><a href="7_TaskDispatcherTest.html" target="classFrame">TaskDispatcherTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="8_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
+<td nowrap><a href="8_UserTest.html" target="classFrame">UserTest</a></td>
+</tr>
+<tr>
+<td nowrap><a href="9_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
