--- a/reports/frame-sourcefiles-com.tw.biblioteca.html
+++ b/reports/frame-sourcefiles-com.tw.biblioteca.html
@@ -39,6 +39,9 @@ com.tw.biblioteca
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.TaskDispatcher.html">TaskDispatcher</a> <i>(100%)</i></td>
 </tr>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.User.html">User</a> <i>(100%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.WelcomeMessage.html">WelcomeMessage</a> <i>(100%)</i></td>
 </tr>
 </tbody>
