added a class Authenticator with spec to validate user

--- a/reports/allclasses-frame.html
+++ b/reports/allclasses-frame.html
@@ -8,34 +8,37 @@
 <h2>Classes</h2>
 <table width="100%">
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/0_AuthenticatorTest.html">AuthenticatorTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/1_BibliotecaAppTest.html">BibliotecaAppTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/2_BookTest.html">BookTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/4_LoginInterfaceTest.html">LoginInterfaceTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/5_MenuTest.html">MenuTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/5_LoginInterfaceTest.html">LoginInterfaceTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/6_MovieTest.html">MovieTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/6_MenuTest.html">MenuTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/7_TaskDispatcherTest.html">TaskDispatcherTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/8_UserTest.html">UserTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/9_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/9_UserTest.html">UserTest</a></td>
+</tr>
+<tr>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/10_WelcomeMessageTest.html">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
