--- a/reports/com/tw/biblioteca/package-frame.html
+++ b/reports/com/tw/biblioteca/package-frame.html
@@ -17,34 +17,37 @@
 <h2>Classes</h2>
 <table width="100%">
 <tr>
-<td nowrap><a href="0_BibliotecaAppTest.html" target="classFrame">BibliotecaAppTest</a></td>
+<td nowrap><a href="0_AuthenticatorTest.html" target="classFrame">AuthenticatorTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="1_BookTest.html" target="classFrame">BookTest</a></td>
+<td nowrap><a href="1_BibliotecaAppTest.html" target="classFrame">BibliotecaAppTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="2_LibraryControllerTest.html" target="classFrame">LibraryControllerTest</a></td>
+<td nowrap><a href="2_BookTest.html" target="classFrame">BookTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="3_LibraryTest.html" target="classFrame">LibraryTest</a></td>
+<td nowrap><a href="3_LibraryControllerTest.html" target="classFrame">LibraryControllerTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="4_LoginInterfaceTest.html" target="classFrame">LoginInterfaceTest</a></td>
+<td nowrap><a href="4_LibraryTest.html" target="classFrame">LibraryTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="5_MenuTest.html" target="classFrame">MenuTest</a></td>
+<td nowrap><a href="5_LoginInterfaceTest.html" target="classFrame">LoginInterfaceTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="6_MovieTest.html" target="classFrame">MovieTest</a></td>
+<td nowrap><a href="6_MenuTest.html" target="classFrame">MenuTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="7_TaskDispatcherTest.html" target="classFrame">TaskDispatcherTest</a></td>
+<td nowrap><a href="7_MovieTest.html" target="classFrame">MovieTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="8_UserTest.html" target="classFrame">UserTest</a></td>
+<td nowrap><a href="8_TaskDispatcherTest.html" target="classFrame">TaskDispatcherTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="9_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
+<td nowrap><a href="9_UserTest.html" target="classFrame">UserTest</a></td>
+</tr>
+<tr>
+<td nowrap><a href="10_WelcomeMessageTest.html" target="classFrame">WelcomeMessageTest</a></td>
 </tr>
 </table>
 </body>
