--- a/reports/frame-sourcefiles.html
+++ b/reports/frame-sourcefiles.html
@@ -15,6 +15,9 @@ All Packages
 <table width="100%">
 <tbody>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Authenticator.html">Authenticator</a> <i>(100%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.BibliotecaApp.html">BibliotecaApp</a> <i>(66%)</i></td>
 </tr>
 <tr>
